force-app/main/default/objects/IB_Deal__c/IB_Deal__c.object-meta.xml
<CustomObject>
    <label>기업 IB 딜</label>
    <nameField>
        <displayFormat>IBD-{0000}</displayFormat>
        <label>딜 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>기업 IB 딜</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>