force-app/main/default/objects/IB_Deal__c/fields/Barrier_End_At__c.field-meta.xml
<CustomField>
    <fullName>Barrier_End_At__c</fullName>
    <label>차단벽 종료일시</label>
    <type>DateTime</type>
</CustomField>