force-app/main/default/objects/IB_Deal__c/fields/Barrier_Start_At__c.field-meta.xml
<CustomField>
    <fullName>Barrier_Start_At__c</fullName>
    <label>차단벽 시작일시</label>
    <type>DateTime</type>
</CustomField>