force-app/main/default/objects/IB_Deal__c/fields/Confidentiality_Level__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Level__c</fullName>
    <label>기밀 등급</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>