force-app/main/default/objects/IB_Deal__c/fields/Deal_Code__c.field-meta.xml
<CustomField>
    <fullName>Deal_Code__c</fullName>
    <displayFormat>DEAL-{00000}</displayFormat>
    <label>딜 코드</label>
    <type>AutoNumber</type>
</CustomField>