force-app/main/default/objects/IB_Deal__c/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <label>예상 수익</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>