force-app/main/default/objects/IB_Deal__c/fields/Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fee_Rate__c</fullName>
    <label>수수료율</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>