force-app/main/default/objects/IB_Deal__c/fields/Information_Barrier_Status__c.field-meta.xml
<CustomField>
    <fullName>Information_Barrier_Status__c</fullName>
    <label>정보차단벽 상태</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>