force-app/main/default/objects/IB_Deal__c/fields/Issue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Issue_Amount__c</fullName>
    <label>발행 금액</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>