force-app/main/default/objects/IB_Deal__c/fields/Issuer_Account__c.field-meta.xml
<CustomField>
    <fullName>Issuer_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>발행사</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>기업 IB 딜(발행사)</relationshipLabel>
    <relationshipName>Issued_IB_Deals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>