force-app/main/default/objects/IB_Deal__c/fields/Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>원천 영업기회</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>기업 IB 딜</relationshipLabel>
    <relationshipName>IB_Deals</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>