force-app/main/default/objects/IB_Deal__c/fields/Target_Coupon__c.field-meta.xml
<CustomField>
    <fullName>Target_Coupon__c</fullName>
    <label>목표 표면금리</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>